refinamentod a logica, adicionado estilização com css

--- a/style.css
+++ b/style.css
@@ -3,6 +3,60 @@
     margin: 0;
 }
 
+body {
+    background-color: #222;
+    color: rgb(219, 219, 219);
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
 input {
-    padding: 5px 10px;
+    padding: 8px 10px;
+    width: 250px;
+}
+
+#send {
+    background-color: #5cb85c;
+}
+#clear {
+    background-color: #d9534f;
+}
+#send, #clear {
+    width: 100px;
+    border: none;
+    border-radius: 5px;
+    text-transform: capitalize;
+    font-weight: bold;
+    transition: all 250ms ease-in-out;
+}
+#send:hover, #clear:hover {
+    transform: scale(1.1, 1.1)
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;;
+}
+
+.row {
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #f0ad4e;
+    color: #222;
+    letter-spacing: 1px;
+    text-align: center;
+    padding: 20px 40px;
 }
